--- a/package.json
+++ b/package.json
@@ -10,14 +10,28 @@
   "devDependencies": {
     "@babel/core": "^7.14.8",
     "@babel/preset-env": "^7.14.8",
+    "@babel/runtime-corejs2": "^7.14.8",
     "babel-loader": "^8.2.2",
+    "babel-plugin-component": "^1.1.1",
     "css-loader": "^6.2.0",
     "file-loader": "4.3.0",
     "html-webpack-plugin": "^5.3.2",
     "style-loader": "^3.2.1",
     "url-loader": "2.3.0",
+    "vue-loader": "^15.9.6",
+    "vue-style-loader": "^4.1.3",
+    "vue-template-compiler": "^2.6.14",
     "webpack": "^5.45.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "axios": "^0.21.1",
+    "mint-ui": "^2.2.13",
+    "pubsub-js": "^1.9.3",
+    "vue": "^2.6.14",
+    "vue-loader-plugin": "^1.3.0",
+    "vue-router": "^3.5.2",
+    "vuex": "^3.6.2"
   }
 }
